cleaning up register responses, moving type exports around
