# back-end/src/controllers/user.controller.ts
@@ -1,10 +1,6 @@
 import { Post, Route, Get, Body, Tags } from 'tsoa';
-import { LoginPayload, LoginResponse, UserCreationPayload, createUser, login } from '../repositories/user.repo';
-
-interface CreateUserResponse {
-	success: boolean;
-	error?: string;
-}
+import { LoginPayload, UserCreationPayload, createUser, login } from '../repositories/user.repo';
+import { SuccessOrError } from '../types';
 
 @Route('user')
 @Tags('User')
@@ -17,27 +13,16 @@ export default class UserController {
 	@Post('/register')
 	public async createUser(
 		@Body() userCreationParam: UserCreationPayload
-	): Promise<CreateUserResponse> {
+	): Promise<SuccessOrError> {
 		const response = await createUser(userCreationParam);
-		console.log(response);
-		if (response) {
-			return {
-				success: true,
-			};
-		} else {
-			return {
-				success: false,
-				error: 'User creation failed',
-			};
-		}
+		return response;
 	}
 	
 	@Post('/login')
 	public async login(
 		@Body() loginParam: LoginPayload
-	): Promise<LoginResponse> {
+	): Promise<SuccessOrError> {
 		const response = await login(loginParam);
-		console.log(response);
 		return response;
 	}
 }
